# PREN_SensorLib

./: CMakeLists.txt  main.cpp
MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.hpp  mpu6050.h
PhotoSensor/: CMakeLists.txt  PhotoSensor.cpp  PhotoSensor.hpp  PhotoSensorArray.cpp  PhotoSensorArray.hpp
TFLuna/: CMakeLists.txt  TFLuna.cpp  TFLuna.hpp
TMC5240/: CMakeLists.txt  MotorSettings.h  TMC5240.cpp  TMC5240.hpp  TMC5240_HW_Abstraction.h
